# fit-rs

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
src/: constants.rs  files.rs  lib.rs
src/errors/: fit_error.rs  mod.rs
src/fit/: data_attributes.rs  data_field.rs  data_message.rs  definition_field.rs  definition_message.rs  fit.rs  fit_header.rs  message.rs  message_header.rs  mod.rs  value.rs
src/geo/: geojson.rs  mod.rs
src/profile/: message_type.rs  mod.rs  profile.rs
src/types/: camera_event.rs  field_description.rs  file_id.rs  gps_metadata.rs  mod.rs  record_full.rs  record_virb.rs  timestamp_correlation.rs
src/types/sensor_data/: mod.rs  sensor_calibration.rs  sensor_data.rs  sensor_type.rs
src/virb/: file.rs  mod.rs  session_fit.rs  session_virb.rs
