[package]
name = "fit-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2"
rayon = "1.5.3"
nalgebra = "0.31.1"
time = "0.3"
walkdir = "2.3.2"
geojson = {version = "0.24", features = ["geo-types"]}
kml = "0.7.1"
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
