[package]
name = "fit-rs"
version = "1.1.1"
edition = "2021"
authors = ["Jens Larsson <jens.dev@fastmail.com>"]
repository = "https://github.com/jenslar/fit-rs"
license = "MIT"
description = "Parse Garmin FIT-files."
keywords = ["gopro", "gpmf", "action camera", "gps", "sensor"]

[dependencies]
binrw = "0.11.2"
rayon = "1.7.0"
nalgebra = "0.32.3"
time = "0.3.23"
walkdir = "2.3.3"
geojson = {version = "0.24.1", features = ["geo-types"]}
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
