[package]
name = "fit-rs"
version = "1.1.5"
edition = "2021"
authors = ["Jens Larsson <jens.dev@fastmail.com>"]
repository = "https://github.com/jenslar/fit-rs"
license = "MIT"
description = "Parse Garmin FIT-files."
keywords = ["gopro", "gpmf", "action camera", "gps", "sensor"]

[dependencies]
binrw = "0.14"
rayon = "1.10"
nalgebra = "0.33"
time = {version = "0.3.36", features = ["macros", "formatting"]}
walkdir = "2.5"
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
